--- a/config/locales/views/users.sv.yml
+++ b/config/locales/views/users.sv.yml
@@ -1,22 +1,26 @@
 sv:
   user:
     account: Konto
+    admin_index: Administrera användare
     asterix_hidden: Fält markerade med * visas endast för funktionärer vid t.ex. Hilbert Café
+    change_state: Justera in/ut
     check_email_to_confirm: Vänlig kontrollera om du fått ett epost %{date} med en länk för att bekräfta din e-postadress.
     confirm: Bekräfta
     contact_for_membership: Kontakta Spindelmännen för att bli registrerad som medlem
     edit: Redigera kontouppgifter
     email_confirmed: Din e-postadress är bekräftad.
-    make_member: Ge medlemskap
-    member: Medlem
-    membership?: Medlemskap
+    make_all_not_present: Justera ut alla användare
+    make_not_present: Justera ut
+    make_present: Justera in
+    manage: Hantera användare
     password: Lösenord
     profile: Användare
-    unmake_member: Ta bort medlemskap
 
     mailer:
-      welcome: Välkommen till F-sektionens hemsida
-      registered: Du har lyckats att registrera en användare.
-      how_to_sign_in: Du loggar in på %{url} med hjälp av din e-postadress %{mail} och lösenordet du angav.
       enjoy: Hoppas att ni ska trivas här på hemsidan.
+      how_to_sign_in: Du loggar in på %{url} med hjälp av din e-postadress %{mail} och lösenordet du angav.
       problem: Har ni några problem får ni kontakta Spindelmän via
+      registered: Du har lyckats att registrera en användare.
+      welcome: Välkommen till F-sektionens hemsida
+    vote:
+      edit: Redigera mötesanvändare
