Removing unused code. Small view and translation fixes

--- a/config/locales/models/vote.sv.yml
+++ b/config/locales/models/vote.sv.yml
@@ -1,7 +1,9 @@
 sv:
   activerecord:
     models:
-      vote: Votering
+      vote:
+        one: Votering
+        other: Voteringar
     attributes:
       vote:
         title: Namn
