Moving code to VoteService. Added methods for seting/reseting votecodes.

--- a/config/locales/models/user.sv.yml
+++ b/config/locales/models/user.sv.yml
@@ -31,3 +31,4 @@ sv:
     protected_information: Information som endast visas av funktionärer
     add_information: Du måste fylla i dina användaruppgifter
     student_lu_email: Du kan endast använda din stild-id@student.lu.se epost
+    vote_administration: Justeringar
