--- a/config/locales/defaults/general.sv.yml
+++ b/config/locales/defaults/general.sv.yml
@@ -16,6 +16,18 @@ sv:
   show: Visa
   remove: Ta bort
 
+  attributes:
+    create: Skapades
+    destroy: Raderades
+    update: Ändrades
+
+  log:
+    action: Åtgärd
+    change: Ändring
+    date: Datum
+    missing: Saknas
+    to: " till "
+    
   administrate: Administrera
 
   actions:
