--- a/config/locales/models/vote_post.sv.yml
+++ b/config/locales/models/vote_post.sv.yml
@@ -1,7 +1,9 @@
 sv:
   activerecord:
     models:
-      vote_post: VotePost
+      vote_post:
+        one: Röst
+        other: Röster
     attributes:
       vote_post:
         votecode: Valkod
