--- a/config/locales/views/vote_posts.sv.yml
+++ b/config/locales/views/vote_posts.sv.yml
@@ -1,4 +1,8 @@
 sv:
   vote_post:
-        bad_votecode: "existerar inte, eller så är personen inte injusterad"
+        bad_votecode: "är inte din valkod, eller så är du inte injusterad"
         vote_closed: "Voteringen är tyvärr stängd"
+        too_many_options: "för många alternativ valda"
+        same_option_twice: "varje alternativ kan väljas max en gång"
+        no_option_selected: "inget alternativ valt"
+        max_choices: "Du kan maximalt välja %{choices} alternativ"
