--- a/config/locales/views/frontpage.sv.yml
+++ b/config/locales/views/frontpage.sv.yml
@@ -1,4 +1,4 @@
 sv:
   front:
-    welcome: Välkommen till F-sektionen!
-    below_welcome: F-sektionen är en ideell förening för studenter som läser vid något av programmen Teknisk Fysik, Teknisk Matematik och Teknisk Nanovetenskap.
+    welcome: Val på F-sektionen!
+    below_welcome: "Välkommen till den nya valsidan!"
