--- a/config/locales/views/vote_users.sv.yml
+++ b/config/locales/views/vote_users.sv.yml
@@ -8,10 +8,12 @@ sv:
     edit: Redigera användare
     edit2: Redigera mötesanvändare
     votecode: Valkod
-    present: Injusterad
+    present: Närvarande
     make_present: Justera in
     make_not_present: Justera ut
     make_all_not_present: Justera ut alla användare
+    made_present: Justerades in
+    made_not_present: Justerades ut
     change_state: Justera in/ut
     reset: Nollställ
     reset_votecode: Nollställ valkod
