--- a/config/locales/models/user.sv.yml
+++ b/config/locales/models/user.sv.yml
@@ -8,7 +8,7 @@ sv:
         confirmed_email: Bekräftad epost
         current_password: Nuvarande lösenord
         email: E-post
-        firstname: Namn
+        firstname: Förnamn
         lastname: Efternamn
         member: Medlemskap
         member_at: Medlemskap bekräftades
