Vote: adding tests and votecode mailing
New votecodes are sent to users
New methods for handling user presence

--- a/config/locales/models/vote.sv.yml
+++ b/config/locales/models/vote.sv.yml
@@ -9,3 +9,6 @@ sv:
         title: Namn
         open: Öppen
         choices: Max alternativ per röst
+
+  vote:
+    already_one_open: Det finns redan ett öppet val
