--- a/config/locales/models/vote_user.sv.yml
+++ b/config/locales/models/vote_user.sv.yml
@@ -5,5 +5,5 @@ sv:
     attributes:
       vote_user:
         name: Namn
-        votecode: Valkod
+        votecode: Röstkod
         present: Närvarande
