--- a/config/locales/models/vote_post.sv.yml
+++ b/config/locales/models/vote_post.sv.yml
@@ -6,5 +6,5 @@ sv:
         other: Röster
     attributes:
       vote_post:
-        votecode: Valkod
+        votecode: Röstkod
         vote_option_ids: Alternativ
