--- a/config/locales/views/vote_posts.sv.yml
+++ b/config/locales/views/vote_posts.sv.yml
@@ -1,10 +1,11 @@
 sv:
   vote_post:
     already_voted: "Du har redan röstat i omröstningen"
-    bad_votecode_or_presence: "är inte din valkod, eller så är du inte injusterad"
+    bad_votecode_or_presence: "är inte din röstkod, eller så är du inte injusterad"
     max_choices: "Du kan maximalt välja %{choices} alternativ"
     no_option_selected: "inget alternativ valt"
     same_option_twice: "varje alternativ kan väljas max en gång"
     too_many_options: "för många alternativ valda"
     vote_closed: "Voteringen är tyvärr stängd"
     unallowed_options: "alternativet tillhör ej denna votering"
+    confirm: "Vill du skicka din röst?"
