Footer: removing extra text, adding bottom bar info

--- a/config/locales/views/default.sv.yml
+++ b/config/locales/views/default.sv.yml
@@ -9,6 +9,8 @@ sv:
   destroy_attr: Förinta %{attr}
   edit: Redigera
   edit_attr: Redigera %{attr}
+  footer:
+    developed_at: Utvecklad vid
   hello: Hej
   here: här
   hide: Dölj
