User: Card number for adjusting of users
Adding card_number field to user
Adding index with remote form for searching with magnetic card reader
Using inputmask to proper format the field

--- a/config/locales/models/user.sv.yml
+++ b/config/locales/models/user.sv.yml
@@ -7,6 +7,7 @@ sv:
         confirmed_at: E-post bekräftades
         confirmed_email: Bekräftad epost
         current_password: Nuvarande lösenord
+        card_number: Kortnummer - Mecenatkortet
         email: E-post
         firstname: Förnamn
         lastname: Efternamn
