Adjustment view: adding current status of voting
Adding javascript to refresh adjustment count, current agenda and current vote
on adjustment index view.
Updating the presence-column on adjustment.

--- a/config/locales/views/agenda.sv.yml
+++ b/config/locales/views/agenda.sv.yml
@@ -3,6 +3,7 @@ sv:
     recursion: För många nivåer av rekursion :)
     too_many_open: Nu försöker du ta upp två punkter på dagordningen samtidigt. Så effektiva kan vi inte vara.
     close: Stäng
+    current: Aktuell dagordning
     set_current: Gör aktuell
     title: Administrera dagordning
     name: Dagordning
