Connect Vote to Agenda
Adding some visuals to User views
Adding Agenda reference to Vote
Adding :selected to VotePost

--- a/config/locales/models/vote.sv.yml
+++ b/config/locales/models/vote.sv.yml
@@ -9,6 +9,7 @@ sv:
         title: Namn
         open: Öppen
         choices: Max alternativ per röst
+        agenda: Dagordning
 
   vote:
     already_one_open: Det finns redan ett öppet val
