Vote status, agenda connection and reset vote function
Changing `:open` to `:status` for `Vote`
Only allows votes to be opened if they belong to the current agenda
Prevents agendas from closing if they have associated votes that are open
Makes it possible to reset votes

Closes #29

--- a/config/locales/models/vote.sv.yml
+++ b/config/locales/models/vote.sv.yml
@@ -8,8 +8,14 @@ sv:
       vote:
         title: Namn
         open: Öppen
+        status: Status
         choices: Max alternativ per röst
         agenda: Dagordning
-
+        future: Framtida
+        current: Aktuell
+        closed: Avslutad
+        agenda_id: Dagordning
+        present_users: Injusterade användare
+        reset: Nollställdes
   vote:
     already_one_open: Det finns redan ett öppet val
