--- a/config/locales/views/vote_users.sv.yml
+++ b/config/locales/views/vote_users.sv.yml
@@ -2,6 +2,8 @@ sv:
   vote_user:
     administrate: Administrera justeringar
     attendance_list: Närvarolista
+    card_number_present: Kortnummer angivet
+    card_number_not_present: Kortnummer ej angivet
     change_state: Justera in/ut
     confirm_all_not_present: "Är du säker på att du vill justera ut ALLA användare?"
     confirm_reset: "Vill du verkligen nollställa röstkoden?"
