Admin vote page: new look
Adding more disposition and current vote status
Adding refresh action for amount of votes

--- a/config/locales/models/audit.sv.yml
+++ b/config/locales/models/audit.sv.yml
@@ -1,5 +1,9 @@
 sv:
   activerecord:
+    models:
+      audit:
+        one: Granskning
+        other: Granskningar
     attributes:
       audit:
         Vote: Votering
