Terms of Service
Add a terms of service for users

--- a/config/locales/views/users.sv.yml
+++ b/config/locales/views/users.sv.yml
@@ -19,6 +19,7 @@ sv:
     password: Lösenord
     profile: Användare
     your_status: Din status
+    read_terms: Användarvillkoren kan alltid hittas under menyn Information.
     terms: Användarvillkor
 
     mailer:
