Soft deletion fixes
Prevents open agendas from being deleted
Displays the title of deleted agendas in the audit logs + adjustments table instead of blank
Fixes an error that broke admin/votes/show if an agenda was deleted

--- a/config/locales/views/agenda.sv.yml
+++ b/config/locales/views/agenda.sv.yml
@@ -2,8 +2,11 @@ sv:
   agenda:
     change_status: Ändra status
     close: Stäng
-    current: Aktuell dagordning
+    current: Aktuell dagordningspunkt
+    deleted: " [RADERAD]"
+    deleted_ok: Dagordningspunkten har raderas
     edit: Redigera punkt
+    error_deleting: Öppna punkter kan ej raderas
     manage: Hantera dagordning
     name: Dagordning
     new: Ny punkt
