--- a/config/locales/views/votes.sv.yml
+++ b/config/locales/views/votes.sv.yml
@@ -23,7 +23,7 @@ sv:
     made_open: Öppnades
     manage: Hantera voteringar
     new_vote: Ny votering
-    no_votes_open: "Just nu finns det tyvärr inga voteringar som är öppna :("
+    no_votes_open: "Just nu finns det tyvärr ingen votering som är öppen."
     number_of_votes: Röster / Injusterade
     open: Öppen
     open_close: Öppna/stäng
