Contacts to admin namespace
Adding ContactMessage to be able to validate messages

--- a/config/locales/models/contact.sv.yml
+++ b/config/locales/models/contact.sv.yml
@@ -8,9 +8,5 @@ sv:
       contact:
         name: Namn
         email: E-post
-        public: Publik
         text: Beskrivning
-        council_id: Utskott
-        sender_name: Ditt namn
-        sender_email: Din e-post
-        sender_message: Meddelande
+        slug: Snabbreferens
