User views: adding descriptions

--- a/config/locales/models/user.sv.yml
+++ b/config/locales/models/user.sv.yml
@@ -11,8 +11,6 @@ sv:
         email: E-post
         firstname: Förnamn
         lastname: Efternamn
-        member: Medlemskap
-        member_at: Medlemskap bekräftades
         name: Namn
         password: Lösenord
         password_confirmation: Bekräfta lösenord
@@ -25,7 +23,7 @@ sv:
     add_information: Du måste fylla i dina användaruppgifter
     attributes_missing: du måste fylla i dina användaruppgifter.
     card_number_already_set: Har redan fyllts i, kontakta administratör för att ändra
-    card_number_format: Fel format på kortnumret
+    card_number_format: Fel format på kortnumret, använd bindestreck mellan, t.ex. 6122-6122-6122-6122
     edit_information: Redigera användaruppgifter
     password_required: Lösenord måste fyllas i för att ändra uppgifter
     password_required_update: Nuvarande lösenord måste fyllas i för att byta lösenord
@@ -33,6 +31,5 @@ sv:
     protected_information: Information som endast visas av funktionärer
     public_information: Publik information
     settings: Kontoinställningar
-    student_lu_email: Du kan endast använda din stild-id@student.lu.se epost
     vote_administration: Justeringar
     submit_card_number: Spara kortnummer
