Removing votecode from adjustment index pages

--- a/config/locales/views/default.sv.yml
+++ b/config/locales/views/default.sv.yml
@@ -25,6 +25,7 @@ sv:
   save: Spara
   save_attr: Spara %{attr}
   search: Sök
+  sent: Skickat
   show: Visa
   show_attr: Visa %{attr}
   sincerely: Med vänlig hälsning
