Add Texts to Agenda
Adding Description for a longer markdown description
Adding Short for a short status text seen on the agenda start page

--- a/config/locales/models/agenda.sv.yml
+++ b/config/locales/models/agenda.sv.yml
@@ -6,7 +6,9 @@ sv:
         other: Punkter
     attributes:
       agenda:
-        future: Framtida
-        current: Aktuell
         closed: Stängd
-        parent_id: Sektion
+        current: Aktuell
+        description: Lång beskrivning
+        future: Framtida
+        parent: Huvudpunkt
+        short: Kort beskrivning
