--- a/config/locales/views/agenda.sv.yml
+++ b/config/locales/views/agenda.sv.yml
@@ -1,21 +1,29 @@
 sv:
   agenda:
+    admin: Administrera dagordning
     change_status: Ändra status
+    children: Underpunkter
     close: Stäng
     current: Aktuell dagordningspunkt
     current_short: Aktuell punkt
     deleted: " [RADERAD]"
     deleted_ok: Dagordningspunkten har raderas
+    destroy: Förinta dagordning
     edit: Redigera punkt
     error_deleting: Öppna punkter kan ej raderas
     manage: Hantera dagordning
     name: Dagordning
     new: Ny punkt
+    parent: Huvudpunkt
     recursion: För många nivåer av rekursion :)
     set_current: Gör aktuell
     title: Administrera dagordning
     too_many_open: Nu försöker du ta upp två punkter på dagordningen samtidigt. Så effektiva kan vi inte vara.
     vote_open: En votering som tillhör denna punkt är fortfarande öppen!
+
+    hint:
+      description: En längre beskrivning av dagordningspunkten för t.ex. de som inte deltagit eller missat en punkt
+      short: En kort beskrivning som syns bredvid punkten i dagordningen, t.ex. Bifall eller namnet på en vald person
 
     state:
       closed: "%{a} stängdes"
