Blank votes and simple majority
* Allows blank vote posts to be created
* Simple majority is now used instead of qualified majority
* Some useful information for adjusters is added
* Non-working links from admin/vote_user#show are removed

--- a/config/locales/models/vote.sv.yml
+++ b/config/locales/models/vote.sv.yml
@@ -18,4 +18,4 @@ sv:
         present_users: Injusterade användare
         reset: Nollställdes
   vote:
-    already_one_open: Det finns redan ett öppet val
+    already_one_open: Det finns redan en öppen votering
