Agenda: use enum for state

--- a/config/locales/models/agenda.sv.yml
+++ b/config/locales/models/agenda.sv.yml
@@ -1,4 +1,11 @@
 sv:
+  model:
+    agenda:
+      statuses:
+        closed: Stängd
+        current: Aktuell
+        future: Framtida
+
   activerecord:
     models:
       agenda:
