News: replace wice_grid

--- a/config/locales/views/news.sv.yml
+++ b/config/locales/views/news.sv.yml
@@ -1,4 +1,15 @@
 sv:
+  admin:
+    news:
+      edit:
+        all_news: Alla nyheter
+        destroy: Förinta nyhet
+        title: Redigera nyhet
+      new:
+        all_news: Alla nyheter
+        title: Ny nyhet
+
+
   news:
     edit: Redigera nyhet
     new: Ny nyhet
